5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4444/executions/1716_2504.log
== TEST (2019-05-07 16:29:18) 
-- CODE:
x = 1
while (x <= 5):
	print(x)
	x = x + 1
-- OUTPUT:
1
2
3
4
5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:29:30) 
-- CODE:
x = 1
while (x <= 500):
	print(x)
	x = x + 1
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:29:35) 
-- CODE:
x = 1
while (x <= 500
		 0):
	print(x)
	x = x + 1
-- ERROR:
File "XXXX", line 3
    0):
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:29:45) 
-- CODE:
x = 1
while (x <= 5000):
	print(x)
	x = x + 1
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
47
48
49
50
51
52
53
54
55
56
57
58
59
60
61
62
63
64
65
66
67
68
69
70
71
72
73
74
75
76
77
78
79
80
81
82
83
84
85
86
87
88
89
90
91
92
93
94
95
96
97
98
99
100
101
102
103
104
105
106
107
108
109
110
111
112
113
114
115
116
117
118
119
120
121
122
123
124
125
126
127
128
129
130
131
132
133
134
135
136
137
138
139
140
141
142
143
144
145
146
147
148
149
150
151
152
153
154
155
156
157
158
159
160
161
162
163
164
165
166
167
168
169
170
171
172
173
174
175
176
177
178
179
180
181
182
183
184
185
186
187
188
189
190
191
192
193
194
195
196
197
198
199
200
201
202
203
204
205
206
207
208
209
210
211
212
213
214
215
216
217
218
219
220
221
222
223
224
225
226
227
228
229
230
231
232
233
234
235
236
237
238
239
240
241
242
243
244
245
246
247
248
249
250
251
252
253
254
255
256
257
258
259
260
261
262
263
264
265
266
267
268
269
270
271
272
273
274
275
276
277
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:30:16) 
-- CODE:
x = 1
while (x <= 9):
	print(x)
	x = x + 2
-- OUTPUT:
1
3
5
7
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:30:48) 
-- CODE:
x = 1
while (x <= 9):
	print(x)
	x = x -1
	
-- OUTPUT:
1
0
-1
-2
-3
-4
-5
-6
-7
-8
-9
-10
-11
-12
-13
-14
-15
-16
-17
-18
-19
-20
-21
-22
-23
-24
-25
-26
-27
-28
-29
-30
-31
-32
-33
-34
-35
-36
-37
-38
-39
-40
-41
-42
-43
-44
-45
-46
-47
-48
-49
-50
-51
-52
-53
-54
-55
-56
-57
-58
-59
-60
-61
-62
-63
-64
-65
-66
-67
-68
-69
-70
-71
-72
-73
-74
-75
-76
-77
-78
-79
-80
-81
-82
-83
-84
-85
-86
-87
-88
-89
-90
-91
-92
-93
-94
-95
-96
-97
-98
-99
-100
-101
-102
-103
-104
-105
-106
-107
-108
-109
-110
-111
-112
-113
-114
-115
-116
-117
-118
-119
-120
-121
-122
-123
-124
-125
-126
-127
-128
-129
-130
-131
-132
-133
-134
-135
-136
-137
-138
-139
-140
-141
-142
-143
-144
-145
-146
-147
-148
-149
-150
-151
-152
-153
-154
-155
-156
-157
-158
-159
-160
-161
-162
-163
-164
-165
-166
-167
-168
-169
-170
-171
-172
-173
-174
-175
-176
-177
-178
-179
-180
-181
-182
-183
-184
-185
-186
-187
-188
-189
-190
-191
-192
-193
-194
-195
-196
-197
-198
-199
-200
-201
-202
-203
-204
-205
-206
-207
-208
-209
-210
-211
-212
-213
-214
-215
-216
-217
-218
-219
-220
-221
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:31:51) 
-- CODE:
x = 1
while (x <=):
	print(x)
	x = x -1
	
-- ERROR:
File "XXXX", line 2
    while (x <=):
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:32:01) 
-- CODE:
x = 1
while (x <=):
	print(x)
	x = x -1
	
-- EXECUTION TIME:
0.579441
-- ERROR:
  File "/home/codebench/codes/1716/2504/main.py", line 2
    while (x <=):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-07 16:32:01) 
-- CODE:
x = 1
while (x <=):
	print(x)
	x = x -1
	
-- EXECUTION TIME:
0.875249
-- ERROR:
  File "/home/codebench/codes/1716/2504/main.py", line 2
    while (x <=):
               ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:33:18) 
-- CODE:
x = 1
while (x <=5):
	print(x)
x = x + 1
	
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 16:33:18) 
-- CODE:
x = 1
while (x <=5):
	print(x)
x = x + 1
	
-- OUTPUT:
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:21:17) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
H = H - V
V = 2 * V - M
dia = dia + 1

if (H > 0):
msg = "LIVRE"
else:
msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- ERROR:
File "XXXX", line 11
    H = H - V
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:21:55) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:12) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:28) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:34) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:46) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:22:57) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:23:08) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:23:22) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 17:23:34) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- OUTPUT:
VAMPIRIZADA
7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-09 16:40:34) 
-- CODE:
# Valores iniciais
H = int(input("No. inicial de habitantes: "))
V = int(input("No. inicial de vampiros: "))
M = int(input("No. de vampiros mortos: "))

# Variavel contadora
dia = 0

# Laco de acumulacao
while (V > 0 and H > 0):
	H = H - V
	V = 2 * V - M
	dia = dia + 1

if (H > 0):
	msg = "LIVRE"
else:
	msg = "VAMPIRIZADA"
print(msg)
print(dia)
-- EXECUTION TIME:
0.31853
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
VAMPIRIZADA
7
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
VAMPIRIZADA
4
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
VAMPIRIZADA
8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-13 17:48:34) 
-- CODE:
v=int(input("quantidade de virus: "))
l=int(input("qtd leucocitos: "))
pv=float(input(" percentual de mut virus: "))
pl=float(input(" percentual de mut leococutos: "))

dias=0
i=0
while(l<=2*v):
	v=v+v*pv/100
	l=l+l*pl/100
	i=i+1
	dias=dias+1
print(dias)
	
-- OUTPUT:
9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-13 17:49:11) 
-- CODE:
v=int(input("quantidade de virus: "))
l=int(input("qtd leucocitos: "))
pv=float(input(" percentual de mut virus: "))
pl=float(input(" percentual de mut leococutos: "))

dias=0
i=0
while(l<=2*v):
	v=v+v*pv/100
	l=l+l*pl/100
	i=i+1
	dias=dias+1
print(dias)
	
-- EXECUTION TIME:
0.154323
-- TEST CASE 1:
---- input:
350625
5500
2
75
---- correct output:
9
---- user output:
9
-- TEST CASE 2:
---- input:
650090
90045
4
90
---- correct output:
5
---- user output:
5
-- TEST CASE 3:
---- input:
419250
1725
9
59
---- correct output:
17
---- user output:
17
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
